spec/saga-2027-preview.ebnf
(* Saga Language Edition 2027 Preview grammar.
   Semantic restrictions are specified by SAGA_LANGUAGE_EDITION_2027_PREVIEW.md. *)
program          = { declaration }, EOF ;
declaration      = { annotation }, [ visibility ], { declaration-modifier },
                   ( edition-declaration | module-declaration | use-declaration
                   | interface-declaration | class-declaration | record-declaration
                   | enum-declaration | extern-function-declaration
                   | function-declaration | variable-declaration | test-declaration
                   | statement ) ;
visibility       = "public" | "internal" | "private" ;
declaration-modifier = "abstract" | "async" | "comptime" | "resource" ;
edition-declaration = "edition", integer, [ ";" ] ;
module-declaration = "module", identifier, [ ";" ] ;
annotation       = "@", identifier, [ "(", [ annotation-arguments ], ")" ] ;
annotation-arguments = annotation-value, { ",", annotation-value } ;
annotation-value = literal | "[", [ annotation-value, { ",", annotation-value } ], "]" ;

use-declaration  = "use", ( identifier | string ), [ "as", identifier ], [ ";" ] ;
variable-declaration = ( "let" | "var" ), identifier, [ ":", type ], "=", expression, [ ";" ] ;
function-declaration = [ "async" | "comptime" ], "fn", identifier, [ type-parameters ],
                       "(", [ parameters ], ")", [ "->", type ], [ constraints ],
                       ( "=", expression, [ ";" ] | block ) ;
extern-function-declaration = "extern", string, "fn", identifier, [ type-parameters ],
                       "(", [ parameters ], ")", "->", type, [ constraints ], [ ";" ] ;
parameters       = parameter, { ",", parameter } ;
parameter        = identifier, ":", type ;
type-parameters  = "[", identifier, { ",", identifier }, "]" ;
constraints      = "where", constraint, { ",", constraint } ;
constraint       = identifier, ":", type, { "+", type } ;
type             = qualified-identifier, [ "[", type, { ",", type }, "]" ] ;
qualified-identifier = identifier, { ".", identifier } ;

interface-declaration = "interface", identifier, [ type-parameters ], [ constraints ],
                        "{", { associated-type-requirement | interface-method }, "}" ;
associated-type-requirement = "type", identifier, [ ";" ] ;
associated-type-definition = "type", identifier, "=", type, [ ";" ] ;
interface-method = { annotation }, [ "async" | "comptime" ], "fn", identifier,
                   [ type-parameters ], "(", [ parameters ], ")", [ "->", type ], [ constraints ], [ ";" ] ;
class-declaration = [ "resource" ], "class", identifier, [ type-parameters ], [ fields ],
                    [ "extends", type ], [ "implements", type-list ], [ constraints ],
                    "{", { associated-type-definition | method-declaration }, "}" ;
record-declaration = "record", identifier, [ type-parameters ],
                     "(", [ record-field, { ",", record-field } ], ")" ;
record-field     = identifier, ":", type ;
enum-declaration = "enum", identifier, "{", identifier, { ",", identifier }, [ "," ], "}" ;
fields           = "(", field, { ",", field }, ")" ;
field            = [ "public" | "private" ], [ "let" | "var" ], identifier, ":", type ;
type-list        = type, { ",", type } ;
method-declaration = { annotation }, [ "abstract" | "override" ], [ "async" | "comptime" ],
                     "fn", identifier, [ type-parameters ], "(", [ parameters ], ")",
                     [ "->", type ], [ constraints ], ( "=", expression, [ ";" ] | block | [ ";" ] ) ;
test-declaration = "test", string, block ;

statement        = defer-statement | using-statement | unsafe-statement | taskgroup-statement
                 | match-statement | if-statement | while-statement | for-statement | try-statement
                 | throw-statement | return-statement | break-statement | continue-statement
                 | block | assignment | expression-statement ;
defer-statement  = "defer", expression, [ ";" ] ;
using-statement  = "using", identifier, "=", expression, block ;
unsafe-statement = "unsafe", block ;
taskgroup-statement = "taskgroup", block ;
match-statement  = "match", expression, "{", { match-case }, [ match-default ], "}" ;
match-case       = "case", expression, block ;
match-default    = "default", block ;
if-statement     = "if", expression, block, [ "else", ( if-statement | block ) ] ;
while-statement  = "while", expression, block ;
for-statement    = "for", identifier, "in", expression, block ;
try-statement    = "try", block, [ "catch", identifier, block ], [ "finally", block ] ;
throw-statement  = "throw", expression, [ ";" ] ;
return-statement = "return", [ expression ], [ ";" ] ;
break-statement  = "break", [ ";" ] ;
continue-statement = "continue", [ ";" ] ;
block            = "{", { declaration }, "}" ;
assignment       = ( identifier | member-expression ), "=", expression, [ ";" ] ;
expression-statement = expression, [ ";" ] ;

expression       = logical-or, [ "?" ] ;
logical-or       = logical-and, { "or", logical-and } ;
logical-and      = equality, { "and", equality } ;
equality         = comparison, { ( "==" | "!=" ), comparison } ;
comparison       = range, { ( "<" | "<=" | ">" | ">=" ), range } ;
range            = additive, [ "..", additive ] ;
additive         = multiplicative, { ( "+" | "-" ), multiplicative } ;
multiplicative   = unary, { ( "*" | "/" | "%" ), unary } ;
unary            = ( "!" | "not" | "-" | "await" | "move" ), unary | power ;
power            = postfix, [ "**", unary ] ;
postfix          = primary, { "(", [ argument-list ], ")" | "[", expression, "]" | ".", identifier | "?" } ;
argument-list    = expression, { ",", expression } ;
primary          = literal | interpolated-string | identifier | list-literal | "(", expression, ")" ;
literal          = integer | decimal | float32 | float64 | string | "true" | "false" ;
float32          = decimal-or-integer, "f32" ;
float64          = decimal-or-integer, "f64" ;
interpolated-string = "$", string-with-interpolation ;
list-literal     = "[", [ argument-list ], "]" ;
member-expression = expression, ".", identifier ;
